# fnaf-CurtainsDrawn

./: Cargo.toml  map.txt  welcome.text
assets/: help.txt  home_menu.txt  map.txt  night1.txt  night2.txt  rooted_help.txt  welcome.txt
src/: anim.rs  destNode.rs  game_audio.rs  game_input.rs  game_io.rs  game_logic.rs  gamestate.rs  main.rs  nights.rs  visual.rs
