[package]
name = "fnaf-CurtainsDrawn"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chronos = "0.0.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
rodio = "0.17"
random = "0.14.0"
rand = "0.9.1"
futures = "0.3.31"
num = "0.4.3"
num-traits = "0.2.19"
num-derive = "0.4.2"

